--- a/sketchbook/styles.css
+++ b/sketchbook/styles.css
@@ -14,17 +14,17 @@ body {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    gap: 6px;
+    gap: 4px;
     
-    padding: 7px 15px;
-    background: #ededed;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border: 1.5px solid #0000ff;
+    padding: 4px 8px;
+    background: #ffffff;
+    box-shadow: 0px 4px 4px -3px rgba(0, 0, 0, 0.132);
+    border: 0px solid #00000044;
     border-radius: 3px;
     text-decoration: none;
     position: absolute;
     z-index: 999;
-    color: #0000ff;
+    color: #000000;
     font-size: 14px;
     font-weight: 400;
   }
@@ -54,7 +54,7 @@ color: #0000ff;
     overflow: auto; /* Enable scrolling for overflow */
     border: 1px dashed #616161; /* Dashed border for visibility */
     background: rgba(255, 255, 255, 0.2); /* Semi-transparent background */
-    backdrop-filter: blur(.5px);
+    backdrop-filter: blur(.8px);
 }
 
 /* Style for the images within the container */
