--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,13 @@ body {
     height: 20px;
 }
 
+.mode-toggle {
+    display: none;
+   
+}
+
 #theme-toggle {
+
     background: none;
     border: none;
     cursor: pointer;
@@ -85,6 +91,7 @@ body.home {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 20px;
 }
 
