--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ body.home {
 .profile-image {
     width: 35px;
     height: 35px;
-    border-radius: 10px;
+    border-radius: 100%;
 transition: transform 0.3s ease; /* Add transition */
 }
 
