--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,7 @@ body.home {
   align-items: center;
   gap: 20px ;
   padding: 20px;
+  padding-top: 60px;
 }
 
 @media (min-width: 768px) {
@@ -154,6 +155,7 @@ body.home {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        padding-top: 0px;
     }
 }
 
@@ -629,7 +631,7 @@ body.work {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 30px;
+  gap: 20px;
 }
 
 .form-block {
@@ -754,14 +756,14 @@ img.chat-emoji:active {
 .social-links {
     display: flex;
     justify-content: center;
-    gap: 20px;
-    row-gap: 10px;
+    gap: 15px;
+    row-gap: 8px;
     flex-wrap: wrap; /* Add this line */
 }
 
 .social-links a {
   color: var(--form-text-secondary);
-  font-size: 14px;
+  font-size: 12px;
   font-family: Roboto, sans-serif;
   text-decoration: none;
   line-height: 18px;
