--- a/styles.css
+++ b/styles.css
@@ -191,9 +191,9 @@ body.home {
     background: var(--form-bg);
     border-radius: 0px 0px 10px 10px;
     border: 1px solid var(--form-bg);
-    padding: 8px;
+    padding: 6px 15px 10px 15px;
     display: inline-flex;
-    justify-content: center;
+    
     gap: 10px;
     margin-bottom: 25px;
     font-family: 'Roboto Mono', monospace;
