--- a/styles.css
+++ b/styles.css
@@ -193,20 +193,19 @@ body.home {
     border: 1px solid var(--form-bg);
     padding: 6px 15px 10px 15px;
     display: inline-flex;
-    
     gap: 10px;
     margin-bottom: 25px;
     font-family: 'Roboto Mono', monospace;
     font-size: 14px;
 }
 .home .status-text {
-    opacity: 0.65;
+    opacity: 0.7;
     text-align: center;
 }
 
 .home .status-text a {
-    color: var(--nav-link);
-    text-decoration: none;
+    color: var(--text-primary);
+    
 }
 .home .blocks-flex {
     display: flex;
