--- a/styles.css
+++ b/styles.css
@@ -346,10 +346,15 @@ transition: transform 0.3s ease; /* Add transition */
 /* #endregion */
 /* #region Portfolio Page Specific */
 body.work {
-  
-  padding: 20px;
+  padding: 20px 20px;
 }
 
+.work .breadcrumb-link-block{
+    position: relative;
+    top: 0;
+    left: 0;
+    margin-bottom: 20px;
+}
 
 .filter-controls {
     margin-bottom: 20px;
