--- a/styles.css
+++ b/styles.css
@@ -482,10 +482,27 @@ body.work {
 /* #region About Page Specific */
 .about {
     margin: auto;
-    max-width: 600px;
     margin-top: 40px;
 }
+
+.about .box {
+    display: flex;
+        flex-direction: column;
+        align-items: top;
+        gap: 20px;
+}
+
+@media (min-width: 768px) {
+    .about .box {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: top;
+        gap: 0px;
+    }
+}
+
 .about-p {
+    max-width: 600px;
     margin:40px 15px;
     line-height: 140%;
 
