--- a/styles.css
+++ b/styles.css
@@ -487,7 +487,7 @@ body.work {
 
 .about .box {
     display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: top;
         gap: 20px;
 }
