--- a/styles.css
+++ b/styles.css
@@ -502,10 +502,10 @@ body.work {
 }
 
 .about-p {
-    max-width: 600px;
+    max-width: 550px;
     margin:40px 15px;
     line-height: 140%;
-    opacity: 0.8;
+    color: var(--text-secondary);
 
 }
 
