--- a/styles.css
+++ b/styles.css
@@ -354,7 +354,9 @@ body.work {
     top: 0;
     left: 0;
     margin-bottom: 20px;
+    margin-top: 80px;
 }
+
 
 .filter-controls {
     margin-bottom: 20px;
@@ -364,7 +366,7 @@ body.work {
     margin: 3px;
     font-family: 'Roboto', monospace;
     font-size: 14px;
-    background: var(--tag-bg);
+    background: var(--clear);
     padding: 3px 8px;
     border-radius: 3px;
     border: none;
@@ -372,15 +374,37 @@ body.work {
     color: var(--text-primary); /* Add this line to ensure consistent text color */
 }
 
+.filter-controls button:hover {
+    background: #eeeeee;
+}
+
 .filter-controls button.active {
-    background: #000;
+    background: #2b2b2b;
     color: #fff;
+}
+
+
+.portfolio-grid::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #00000007;
+    z-index: -10;
+    pointer-events: none;
+    transition: opacity 0.4s ease;
+    border-radius: 5px;
+}
+
+.portfolio-grid.loaded::before {
+    opacity: 0;
 }
 
 .portfolio-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 10px;
+    
 }
 
 .portfolio-item {
@@ -388,19 +412,22 @@ body.work {
     border-radius: 3px;
     overflow: hidden;
     opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.3s ease, transform 0.3s ease;
+    filter: brightness(200);
+    transform: translateY(0px);
+    transition: opacity .5s ease, transform 0.3s ease-out;
     cursor: pointer;
 }
 
 .portfolio-item.animate-in {
     opacity: 1;
+    filter: brightness(1);
     transform: translateY(0);
 }
 
 .portfolio-item.hover-ready:hover {
     transform: translateY(-5px);
 }
+
 
 .thumbnail {
     width: 100%;
@@ -409,7 +436,35 @@ body.work {
     background-size: cover;
     background-position: center;
     border-radius: 3px;
+    outline: 1.5px solid rgba(0, 0, 0, 0.084);
+    outline-offset: -1.5px;
+    box-shadow:inset 0 0 6px #ffffff51
 }
+
+
+.portfolio-item:not(.animate-in) .thumbnail {
+    background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
+    background-size: 200% 100%;
+    animation: skeleton-loading 1.5s infinite;
+}
+
+.portfolio-item:not(.animate-in) .thumbnail::before {
+    content: '';
+    display: block;
+    padding-top: 66.67%; /* 3:2 aspect ratio, adjust as needed */
+}
+
+@keyframes skeleton-loading {
+    0% {
+        background-position: 200% 0;
+    }
+    100% {
+        background-position: -200% 0;
+    }
+}
+
+
+
 
 .portfolio-content {
     padding-top: 10px;
@@ -604,7 +659,7 @@ body.work {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(255, 255, 255, 0.928);
 }
 
 .modal-content {
